<resources>

    <string name="app_name">My Nanny</string>

    <!--STREAMING-->

    <!--<string name="url_streaming">http://192.168.43.206:8000/webcam.mp4</string>-->
    <string name="url_streaming">http://172.70.10.122:8000/webcam.mp4</string>

    <!-- MQTT -->
    <string name="address_broker_mqtt">tcp://broker.mqttdashboard.com</string>
    <string name="client_id_mqtt">client-android</string>

    <!--TOPICS-->
    <string name="topic_login_request">myNanny/auto/login_request</string>
    <string name="topic_login_response">myNanny/auto/login_response</string>
    <string name="topic_login_ok">Login_OK</string>

    <string name="topic_register_request">myNanny/auto/register_request</string>
    <string name="topic_register_response">myNanny/auto/register_response</string>
    <string name="topic_register_ok">Register_OK</string>

    <string name="topic_humidity">myNanny/sensor/humidity</string>
    <string name="topic_baby_temperature">myNanny/sensor/baby_temperature</string>
    <string name="topic_temperature">myNanny/sensor/temperature</string>
    <string name="topic_light">myNanny/sensor/light</string>

    <string name="topic_publish_light">myNanny/actuator/light</string>

    <string name="topic_alarm_baby_woke_up">myNanny/care/baby_woke_up</string>
    <string name="topic_alarm_baby_fever">myNanny/care/baby_fever</string>

    <string name="topic_report_read">myNanny/reports/read</string>
    <string name="topic_report_response">myNanny/reports/response</string>

    <!-- STRINGS-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="baby_temperature">Baby Temperature</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="light">light</string>
    <string name="environmental_measurements">Environmental Measurements</string>
    <string name="reports">Reports</string>
    <string name="ok">OK</string>
    <string name="user_already_exists">User already exists!</string>
    <string name="username_or_password_invalid">Username or password is invalid!</string>
    <string name="alert">Alert</string>
    <string name="your_baby_woke_up">Your baby woke up!</string>
    <string name="your_baby_has_a_fever">Your baby has a fever!</string>
    <string name="email_not_valid">the Email is not valid!</string>
    <string name="password_not_valid">The password is not valid!</string>
    <string name="password_not_equals">Passwords are not equals!</string>
    <string name="ip_streaming">IP Streaming</string>
    <string name="save">save</string>
    <string name="room_temperature">Room Temperature</string>
    <string name="room_light">Room Light</string>
    <string name="room_humidity">Room Humidity</string>
    <string name="real_time_monitoring">Real-time Monitoring</string>
</resources>
