<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/logo_app_layout" />

        <EditText
            android:id="@+id/edt_email"
            style="@style/input_field_default"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/input_field_default"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edt_confirm_password"
            style="@style/input_field_default"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        style="@style/confirm_button"
        android:layout_alignParentBottom="true"
        android:text="@string/register" />


</RelativeLayout>