<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".views.monitor.MonitorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/label_default"
                android:text="@string/real_time_monitoring" />

            <RelativeLayout style="@style/cell">

                <TextView
                    style="@style/label_cell"
                    android:text="@string/baby_temperature" />

                <TextView
                    android:id="@+id/txt_baby_temperature"
                    style="@style/info_cell"
                    android:text="37°C" />

            </RelativeLayout>

            <RelativeLayout style="@style/cell">

                <TextView
                    style="@style/label_cell"
                    android:text="@string/room_temperature" />

                <TextView
                    android:id="@+id/txt_temperature"
                    style="@style/info_cell"
                    android:text="22°C" />

            </RelativeLayout>

            <RelativeLayout style="@style/cell">

                <TextView
                    style="@style/label_cell"
                    android:text="@string/room_humidity" />

                <TextView
                    android:id="@+id/txt_humidity"
                    style="@style/info_cell"
                    android:text="80 %" />
            </RelativeLayout>

            <RelativeLayout style="@style/cell">

                <TextView
                    style="@style/label_cell"
                    android:text="@string/room_light" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/light_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_light" />

                    <Switch
                        android:id="@+id/change_light_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:scaleX="0.7"
                        android:scaleY="0.7" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>